updates on wifi

--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -81,12 +81,19 @@
 		<![endif]-->
 
     <style>
-        
+
     </style>
 </head>
 
 <body>
-    
+    <div class="container">
+        <h1>Contact Us</h1>
+        <p>Thank you for visiting our website.</p>
+        <p>Your IP address: {{ user_ip }}</p>
+        <p>Your User-Agent: {{ user_agent }}</p>
+        <p>Your Host Name: {{ host_name }}</p>
+        <p>We appreciate your interest in our services.</p>
+    </div>
 </body>
 
 </html>
