--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="assets/css/colorbox.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+
 
     <!-- page specific plugin styles -->
 
@@ -86,10 +88,24 @@
 </head>
 
 <body>
-    <h1>Contact Us</h1>
+    <!-- <h1>Contact Us</h1>
     <p>Host Name: {{ network_details['Host Name'] }}</p>
     <p>IPv4 Address: {{ network_details['IPv4 Address'] }}</p>
-    <p>IPv6 Address: {{ network_details['IPv6 Address'] }}</p>
+    <p>IPv6 Address: {{ network_details['IPv6 Address'] }}</p> -->
+    <div class="container">
+        <div class="feedback-box">
+            <div class="feedback-form">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+            </div>
+
+            <div class="contact-details">
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
