--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -24,8 +24,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
     <!-- page specific plugin styles -->
@@ -201,10 +200,6 @@
 </head>
 
 <body>
-    <!-- <h1>Contact Us</h1>
-    <p>Host Name: {{ network_details['Host Name'] }}</p>
-    <p>IPv4 Address: {{ network_details['IPv4 Address'] }}</p>
-    <p>IPv6 Address: {{ network_details['IPv6 Address'] }}</p> -->
     <div class="container">
         <div class="section">
             <h1>We'd love to hear from you</h1>
@@ -221,11 +216,13 @@
                     <form action="/submitContactUs" method="POST">
                         <span class="title">Contact Us</span>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput1" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="floatingInput1" placeholder="name@example.com"
+                                required>
                             <label for="floatingInput1">Enter your email</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="floatingInput2" placeholder="Your Name" required>
+                            <input type="text" class="form-control" id="floatingInput2" placeholder="Your Name"
+                                required>
                             <label for="floatingInput2">Enter your name</label>
                         </div>
                         <div class="form-floating mb-3">
