--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -105,24 +105,23 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
             min-height: 100vh;
             /* Ensure the container covers the viewport height */
         }
 
         .section {
             margin: 30px 0;
-
+            text-align: center;
         }
 
         .feedback-section {
             margin: 30px 0;
-            width: 90%;
         }
 
         .section h1 {
             text-transform: capitalize;
             font-size: 50px;
+            text-align: center;
         }
 
         .section .description {
@@ -176,6 +175,9 @@
 
         /* Style the right column (contact details) */
         .feedback-details {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             flex: 1;
             /* Take up 50% of the container width */
             background-color: #f0f0f0;
@@ -196,6 +198,111 @@
             flex-direction: row;
             justify-content: center;
         }
+
+        .contact-info {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .contact-detail {
+            display: flex;
+            /* flex-direction: column; */
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        .email-detail {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        .icon {
+            width: 2rem;
+            height: 2rem;
+            border-radius: 50%;
+            background-color: #ccc;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 10px 1rem;
+        }
+
+        .icon i {
+            font-size: 1.5rem;
+            color: darkslateblue;
+        }
+
+        .text {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1rem;
+            line-height: 1.5rem;
+            text-align: center;
+        }
+
+        .text-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .text-wrapper>* {
+            width: 100%;
+        }
+
+        .mobile-detail {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .mobile-detail>* {
+            margin-bottom: 10px;
+        }
+
+        .form-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            text-decoration: none;
+        }
+
+        .form-header a {
+            /* Add a border and border-radius to the link */
+            border: 1px solid #ccc;
+            border-radius: 5px;
+
+            /* Add some padding to the link */
+            padding: 10px 15px;
+
+            /* Add a background color to the link */
+            background-color: #fff;
+
+            /* Add a hover color to the link */
+            color: #000;
+            transition: color 0.2s ease-in-out;
+
+            /* Add a font style to the link */
+            font-size: 16px;
+            font-weight: bold;
+
+            /* Add a text-decoration to the link */
+            text-decoration: none;
+        }
+
+        .form-header a:hover {
+            /* Change the color of the link when it is hovered */
+            color: #fff;
+
+            /* Change the background color of the link when it is hovered */
+            background-color: #000;
+        }
     </style>
 </head>
 
@@ -214,16 +321,19 @@
             <div class="feedback-box">
                 <div class="feedback-form">
                     <form action="/submitContactUs" method="POST">
-                        <span class="title">Contact Us</span>
+                        <div class="form-header">
+                            <span class="title">Contact Us</span>
+                            <a href="/trackContactUs" target="_blank">View asked questions</a>
+                        </div>
                         <div class="form-floating mb-3">
                             <input type="email" class="form-control" id="floatingInput1" placeholder="name@example.com"
                                 required>
-                            <label for="floatingInput1">Enter your email</label>
+                            <label for="floatingInput1">Enter your id</label>
                         </div>
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control" id="floatingInput2" placeholder="Your Name"
                                 required>
-                            <label for="floatingInput2">Enter your name</label>
+                            <label for="floatingInput2">Enter your programme</label>
                         </div>
                         <div class="form-floating mb-3">
                             <select class="form-select" id="categorySelect" name="category" required>
@@ -238,7 +348,7 @@
                         </div>
                         <div class="form-floating mb-3">
                             <textarea class="form-control" id="floatingTextarea" placeholder="Enter your inquiries"
-                                style="height: 150px;" required></textarea>
+                                style="height: 200px;" required></textarea>
                             <label for="floatingTextarea">Enter your inquiries</label>
                         </div>
                         <div class="submit-button">
@@ -251,7 +361,7 @@
                     <!-- Google Maps Embed API -->
                     <iframe style="width: 100%;"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3983.5380217035718!2d101.7285053941956!3d3.2152015485914953!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2dc5e067aae3ab84!2sTunku+Abdul+Rahman+University+College!5e0!3m2!1sen!2sus!4v1436418290470"
-                        width="100%" height="300" frameborder="0" allowfullscreen=""></iframe>
+                        width="100%" height="250" frameborder="0" allowfullscreen=""></iframe>
 
                     <div class="contact-info">
                         <!-- Address -->
@@ -260,25 +370,37 @@
                                 <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="text">
-                                <strong>Address:</strong> 123 Main Street, City, Country
+                                JALAN GENTING KELANG
+                                SETAPAK
+                                53300 KUALA LUMPUR
                             </div>
                         </div>
-                        <!-- Contact Number -->
+                        <!-- Contact Numbers -->
                         <div class="contact-detail">
                             <div class="icon">
                                 <i class="fas fa-phone"></i>
                             </div>
-                            <div class="text">
-                                <strong>Contact Number:</strong> +1 (123) 456-7890
+                            <div class="mobile-detail">
+                                <div class="text">
+                                    <div class="text-wrapper">
+                                        <strong>Telephone</strong> 603-41450123 Ext no. 3233
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <div class="text-wrapper">
+                                        <strong>FAX</strong> 603-41423166 / 018 925 1001
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
                         <!-- Email -->
-                        <div class="contact-detail">
+                        <div class="email-detail">
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <div class="text">
-                                <strong>Email:</strong> contact@example.com
+                                focs@tarc.edu.my
                             </div>
                         </div>
                     </div>
