--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -105,7 +105,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            min-height: 100vh;
+            /* min-height: 100vh; */
+            margin-bottom: 40px;
             /* Ensure the container covers the viewport height */
         }
 
@@ -113,12 +114,68 @@
             margin: 30px 0;
             text-align: center;
         }
+
+        .details-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid #ccc;
+            padding: 10px;
+        }
+
+        .details-header h2 {
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 0;
+        }
+
+        .search-bar {
+            position: relative;
+        }
+
+        .floating-search-bar {
+            position: relative;
+            width: 350px;
+            padding: 10px 0;
+            padding-left: 20px;
+            padding-right: 35px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .floating-search-bar:focus {
+            outline: none;
+            border-color: #007bff;
+        }
+
+        .search-icon {
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #ccc;
+            z-index: 1;
+        }
+
+        .search-icon:hover {
+            color: #007bff;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-
+        <div class="details-header">
+            <h2>View Asked Questions</h2>
+            <div class="search-bar">
+                <input type="text" class="form-control floating-search-bar"
+                    placeholder="Search question / student id / name...">
+                <i class="fas fa-search search-icon"></i>
+            </div>
+        </div>
     </div>
 </body>
 
