--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -319,9 +319,11 @@
         </div>
 
         <div class="feedback-section">
+            {{ if sendSuccess = 1 }}
             <div class="alert alert-success" style="padding: 10px; width: 20%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
                 {{ msg }}
             </div>
+            {{ endif }}
             <div class="feedback-box">
                 <div class="feedback-form">
 
