--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -319,8 +319,12 @@
         </div>
 
         <div class="feedback-section">
-            {{ if sendSuccessful = 1 }}
-            <div class="alert alert-success" style="padding: 10px; width: 20%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
+            {{ if msg }}
+            <div class="alert alert-success"
+                style="padding: 10px; width: 20%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
                 {{ msg }}
             </div>
             {{ endif }}
