--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -309,6 +309,14 @@
 
 <body>
     <div class="container">
+        <!-- Add this section for displaying flash messages -->
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="alert alert-success">
+            {{ messages[0] }}
+        </div>
+        {% endif %}
+        {% endwith %}
         <div class="section">
             <h1>We'd love to hear from you</h1>
         </div>
@@ -319,22 +327,6 @@
         </div>
 
         <div class="feedback-section">
-            {{ if msg }}
-            <div class="alert alert-success"
-                style="padding: 10px; width: 20%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                {{ msg }}
-            </div>
-            {{ else }}
-            <!-- Hide the success message if the msg variable is empty -->
-            <style>
-                .alert-success {
-                    display: none;
-                }
-            </style>
-            {{ endif }}
             <div class="feedback-box">
                 <div class="feedback-form">
 
