--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -282,6 +282,8 @@
 
 <body>
     <div class="container">
+        <h2 style="margin-top: 10px;">Welcome! {{ name }}</h2>
+        <hr>
         <div class="details-header">
             <h2>View Asked Questions</h2>
             <div class="search-bar">
