--- a/templates/home.html
+++ b/templates/home.html
@@ -185,7 +185,7 @@
 
 
                                     <ul class="rd-navbar-nav" id="navCon">
-                                        <li><a href="/adminViewContactUs">Admin</a></li>
+                                        <li><a href="/adminLogin">Admin</a></li>
                                         <li><a href="/contactUs">Contact Us</a></li>
                                         <li><a href="https://www.tarc.edu.my/focs/index.jsp" target="_self"
                                                 class="ja"><span class="fa-stack fa-lg"><i
