--- a/templates/adminContactUs.html
+++ b/templates/adminContactUs.html
@@ -364,8 +364,8 @@
                                 <tr>
                                     <td>{{ contact[6] }}</td>
                                     <td>{{ contact[2] }}</td>
-                                    <td>{{ contact[3] }}</td>
-                                    <td>{{ contact[4] }}</td>
+                                    <td><textarea>{{ contact[3] }}</textarea></td>
+                                    <td><textarea>{{ contact[4] }}</textarea></td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
