--- a/templates/adminLogin.html
+++ b/templates/adminLogin.html
@@ -86,7 +86,7 @@
 
         <h2 style="font-weight: 500;">University Admin Login</h2>
         <hr>
-        <form action="/adminContactUs">
+        <form action="/adminContactUs" method="POST">
             <div>
                 <div class="msg">{{ msg }}</div>
                 <div class="form">
