--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -308,52 +308,33 @@
             background-color: #000;
         }
 
-        /* Modal */
-        /* The Modal (background) */
         .modal {
-            display: none;
-            /* Hidden by default */
             position: fixed;
-            /* Stay in place */
-            z-index: 1;
-            /* Sit on top */
-            left: 0;
             top: 0;
+            left: 0;
             width: 100%;
-            /* Full width */
             height: 100%;
-            /* Full height */
-            overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
-            background-color: rgba(0, 0, 0, 0.4);
-            /* Black w/ opacity */
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 100;
         }
 
-        /* Modal Content/Box */
         .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            /* 15% from the top and centered */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 500px;
+            height: 300px;
+            background-color: white;
+            border: 1px solid black;
             padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            /* Could be more or less, depending on screen size */
         }
 
-        /* The Close Button */
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
+        .close-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 10px;
             cursor: pointer;
         }
     </style>
@@ -419,11 +400,11 @@
                     </form>
                 </div>
 
-                <div id="myModal" class="modal">
-                    <!-- Modal content -->
+                <div class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <p>Some text in the Modal..</p>
+                        <button type="button" class="close-button" onclick="closeModal()">X</button>
+                        <h1>This is a modal</h1>
+                        <p>This is the content of the modal.</p>
                     </div>
                 </div>
 
@@ -509,31 +490,14 @@
     </footer>
 
     <script>
-        // Get the modal
-        var modal = document.getElementById("myModal");
-
-        // Get the button that opens the modal
-        var btn = document.getElementById("myBtn");
-
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on the button, open the modal
-        btn.onclick = function () {
-            modal.style.display = "block";
+        function openModal() {
+            document.querySelector('.modal').classList.add('active');
         }
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
+        function closeModal() {
+            document.querySelector('.modal').classList.remove('active');
         }
 
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
     </script>
 </body>
 
